update mobileWeb day01's code

--- a/mobileWeb/day01/Code/baseMobile/10-视口设置-maximum-scale.html
+++ b/mobileWeb/day01/Code/baseMobile/10-视口设置-maximum-scale.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,25 +11,28 @@
 
       有可能android设备是可以的 
   -->
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0" >
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0">
   <title>Document</title>
   <style>
-    html,body{
-      margin:0;
-      padding:0;
-    }
-    .box {
-        width:375px;
-        height:200px;
-        background-color:blue;
-        text-align: center;
-        line-height: 200px;
-        font-size: 50px;
+    html,
+    body {
+      margin: 0;
+      padding: 0;
     }
 
+    .box {
+      width: 375px;
+      height: 200px;
+      background-color: blue;
+      text-align: center;
+      line-height: 200px;
+      font-size: 50px;
+    }
   </style>
 </head>
+
 <body>
   <div class="box">8</div>
 </body>
+
 </html>
