--- a/mobileWeb/day01/Code/baseMobile/13-百分比.html
+++ b/mobileWeb/day01/Code/baseMobile/13-百分比.html
@@ -10,16 +10,19 @@
 			margin: 0;
 			background-color: #F7F7F7;
 		}
+
 		.box {
-			width:500px;
+			width: 500px;
 			height: 600px;
 			margin: 50px auto;
 			border: 1px solid #000;
 		}
 
 		.inner {
-			width: 50%;/*250px*/
-			height: 50%;/*300px*/
+			width: 50%;
+			/*250px*/
+			height: 50%;
+			/*300px*/
 			background-color: palevioletred;
 			/* margin相对于父元素的宽度 */
 			margin-left: 50%;
